--- a/src/tests/ftest/soak/soak_smoke.yaml
+++ b/src/tests/ftest/soak/soak_smoke.yaml
@@ -64,7 +64,7 @@ container:
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
     control_method: daos
 container_reserved:
-    oclass: OC_RP_2G1
+    oclass: OC_SX
     akey_size: 5
     dkey_size: 5
     data_size: 4096
@@ -122,7 +122,6 @@ ior_smoke:
     segment_count: 1
     dfs_oclass:
         - 'SX'
-        - 'RP_2G1'
 fio_smoke:
   names:
       - global
@@ -147,7 +146,6 @@ fio_smoke:
         - 'randrw'
     oclass:
         - 'SX'
-        - 'RP_2G1'
 dfuse:
     mount_dir: "/tmp/daos_dfuse/"
     disable_direct_io: True
