--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -27,9 +27,8 @@ LIB_SRC = ['crt_utils.c']
 ####################################
 # Create cart utility share objects
 ####################################
-def build_utility_shared_obj(denv):
+def build_utility_shared_obj(denv, prereqs):
     """Build cart utility library"""
-    Import('prereqs')
     prereqs.require(denv, 'mercury', headers_only=True)
     cart_utils_objs  = denv.SharedObject(LIB_SRC)
     Export('cart_utils_objs')
@@ -91,7 +90,7 @@ def scons():
                     os.path.join('../include', 'cart', header))
 
     # Generate cart utility shared objects
-    build_utility_shared_obj(env)
+    build_utility_shared_obj(env, prereqs)
 
     denv = env.Clone()
 
