CORCI-1063 build: Update per review comments
Signed-off-by: John E Malmberg <john.e.malmberg@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -17,7 +17,7 @@ ARG CB0
 # If a local distro repository is supplied, then we should use it
 # and disable using the distro repositories.
 # The Docker image starts out with the DISTRO provided GPG keys
-# on the disk, but not installed.  These must be isntalled before
+# on the disk, but not installed.  These must be installed before
 # adding any repo that needs GPG keys but does not provide meta
 # data for installing those keys.  Then the epel-release package
 # version from the extras repository must be installed and the
