--- a/src/tests/ftest/soak/soak_harassers.yaml
+++ b/src/tests/ftest/soak/soak_harassers.yaml
@@ -66,17 +66,11 @@ container:
     control_method: daos
     daos_timeout: 30
 container_reserved:
-    oclass: OC_RP_2G1
-    akey_size: 5
-    dkey_size: 5
-    data_size: 4096
-    object_qty: 20
-    record_qty: 1
-    record_size: 100
-    array_size: 1
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on,rf:1
-    control_method: API
+    oclass: RP_2G1
+    control_method: daos
+    daos_timeout: 30
 # test_params - Defines the type of test to run and how long it runs
 #               It also defines how many pools and jobs to create
 #               name:                The name of the Avocado testcase
