DAOS-7457 ci: Run all tests on EL8
Now that the middleware and test tools have been ported to build on
EL8.

Skip-PR-comments: true

Add back R: libuuid-devel to daos-devel package as it's always necessary
when building with libdaos.

Skip-PR-comments: true
Quick-Functional: true
Test-tag: pr daily_regression
Skip-func-test-vm: true
Skip-func-test-leap15: true
Skip-func-test-el7: true
Skip-func-test-el8: true
Skip-func-hw-test: false
Func-hw-test-distro: centos8
Allow-unstable-test: true

Signed-off-by: Brian J. Murrell <brian.murrell@intel.com>

--- a/debian/control
+++ b/debian/control
@@ -57,6 +57,7 @@ Package: libdaos-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
+Depends: libuuid-dev
 Description: The Distributed Asynchronous Object Storage (DAOS) is an open-source
  software-defined object store designed from the ground up for
  massively distributed Non Volatile Memory (NVM). DAOS takes advantage
