--- a/src/tests/ftest/io/llnl_mpi4py.yaml
+++ b/src/tests/ftest/io/llnl_mpi4py.yaml
@@ -19,5 +19,5 @@ container:
 client_processes:
     np: 8
 test_repo:
-    llnl: "/usr/lib64/testmpio"
-    mpi4py: "/usr/lib64/python2.7/site-packages/mpi4py/tests"
+    llnl: "testmpio"
+    mpi4py: "/usr/lib64/python3.6/site-packages/mpi4py/tests"
