CART-963 tests: Need -I path to crt_utils.h
Restore CPPPATH so crt_utils.h is found:
  env.AppendUnique(CPPPATH=['#/src/include/cart'])

Skip-build-leap15-rpm: true
Skip-func-test-leap15: true
Skip-build-ubuntu-clang: true
Skip-build-leap15-icc: true
Skip-coverity-test: true
Parallel-build: true
Quick-build: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test: true
Skip-unit-test-memcheck: true
Skip-coverity-test: true
Skip-func-hw-test-small: true
Skip-func-hw-test-medium: true
Skip-func-hw-test-large: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -82,6 +82,7 @@ def scons():
     env.AppendUnique(CPPPATH=[Dir('.').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('../gurt').srcnode()])
+    env.AppendUnique(CPPPATH=['#/src/include/cart'])
 
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
