--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -29,8 +29,9 @@ LIB_SRC = ['crt_utils.c']
 ####################################
 def build_utility_shared_obj(denv, prereqs):
     """Build cart utility library"""
-    prereqs.require(denv, 'mercury', headers_only=True)
-    cart_utils_objs  = denv.SharedObject(LIB_SRC)
+    _denv = denv.Clone()
+    prereqs.require(_denv, 'mercury', headers_only=True)
+    cart_utils_objs  = _denv.SharedObject(LIB_SRC)
     Export('cart_utils_objs')
 
 # pylint: disable=unused-argument
