CART-963 tests: Back out clone causing missing .h
Resolve missing crt_utils.h:
  https://build.hpdd.intel.com/blue/rest/organizations/jenkins/pipelines/daos-stack/pipelines/daos/branches/PR-5309/runs/30/nodes/164/steps/411/log

Skip-build-leap15-rpm: true
Skip-func-test-leap15: true
Skip-build-ubuntu-clang: true
Skip-build-leap15-icc: true
Skip-coverity-test: true
Parallel-build: true
Quick-build: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test: true
Skip-unit-test-memcheck: true
Skip-coverity-test: true
Skip-func-hw-test-small: true
Skip-func-hw-test-medium: true
Skip-func-hw-test-large: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -29,9 +29,8 @@ LIB_SRC = ['crt_utils.c']
 ####################################
 def build_utility_shared_obj(denv, prereqs):
     """Build cart utility library"""
-    _denv = denv.Clone()
-    prereqs.require(_denv, 'mercury', headers_only=True)
-    cart_utils_objs  = _denv.SharedObject(LIB_SRC)
+    prereqs.require(denv, 'mercury', headers_only=True)
+    cart_utils_objs  = denv.SharedObject(LIB_SRC)
     Export('cart_utils_objs')
 
 # pylint: disable=unused-argument
