--- a/src/tests/ftest/ior/ior_small.yaml
+++ b/src/tests/ftest/ior/ior_small.yaml
@@ -31,6 +31,8 @@ pool:
     scm_size: 3000000000
     nvme_size: 9000000000
     control_method: dmg
+dfuse:
+    disable_caching: true
 container:
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
