CART-963 tests: Don't pollute global SCons env
Rework of 74ad5fe2. Add include/cart into self_test
SCons construction environment only.

Skip-build-leap15-rpm: true
Skip-func-test-leap15: true
Skip-build-ubuntu-clang: true
Skip-build-leap15-icc: true
Skip-coverity-test: true
Parallel-build: true
Quick-build: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test: true
Skip-unit-test-memcheck: true
Skip-coverity-test: true
Skip-func-hw-test-small: true
Skip-func-hw-test-medium: true
Skip-func-hw-test-large: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -88,10 +88,10 @@ def scons():
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
                     os.path.join('../include', 'cart', header))
 
-    # Generate cart utility shared objects
-    build_utility_shared_obj(env, prereqs)
-
     denv = env.Clone()
+
+    # Generate cart utility shared objects
+    build_utility_shared_obj(denv, prereqs)
 
     denv.AppendUnique(LIBS=['gurt'])
     prereqs.require(denv, 'mercury')
