--- a/src/tests/ftest/soak/soak_stress_2h.yaml
+++ b/src/tests/ftest/soak/soak_stress_2h.yaml
@@ -127,15 +127,13 @@ mdtest_stress:
     iteration: 1
     num_of_files_dirs: 1000
     pre_iter: 10
-    flags: '-L -F -N 1 -P -v'
+    flags: '-v'
     write_bytes:
         - 3901
     read_bytes:
         - 3901
     depth:
         - 5
-    dfs_oclass:
-        - 'SX'
-    dfs_dir_oclass:
-        - 'SX'
+    dfs_oclass: 'SX'
+    dfs_dir_oclass: 'S1'
     dfs_destroy: False
