WIP: Modify server build to remove links with spdk/ipmctl
With this change, daos_server has no linkage with spdk:
$ ldd ~/daos/install/bin/daos_server
        linux-vdso.so.1 =>  (0x00007ffde26f2000)
        libhwloc.so.5 => /lib64/libhwloc.so.5 (0x00007fac7f06a000)
        libfabric.so.1 => /home/mjmac/daos/install/bin/../prereq/dev/ofi/lib/libfabric.so.1 (0x00007fac7ed59000)
        libpthread.so.0 => /lib64/libpthread.so.0 (0x00007fac7eb3d000)
        libgurt.so.4 => /home/mjmac/daos/install/bin/../../build/dev/gcc/src/gurt/libgurt.so.4 (0x00007fac7e901000)
        libc.so.6 => /lib64/libc.so.6 (0x00007fac7e533000)
        libm.so.6 => /lib64/libm.so.6 (0x00007fac7e231000)
        libnuma.so.1 => /lib64/libnuma.so.1 (0x00007fac7e025000)
        libltdl.so.7 => /lib64/libltdl.so.7 (0x00007fac7de1b000)
        librdmacm.so.1 => /lib64/librdmacm.so.1 (0x00007fac7dc04000)
        libibverbs.so.1 => /lib64/libibverbs.so.1 (0x00007fac7d9eb000)
        libpsm2.so.2 => /home/mjmac/daos/install/bin/../prereq/dev/ofi/lib/../../psm2/lib64/libpsm2.so.2 (0x00007fac7d788000)
        librt.so.1 => /lib64/librt.so.1 (0x00007fac7d580000)
        libdl.so.2 => /lib64/libdl.so.2 (0x00007fac7d37c000)
        /lib64/ld-linux-x86-64.so.2 (0x00007fac7f2a7000)
        libyaml-0.so.2 => /lib64/libyaml-0.so.2 (0x00007fac7d15c000)
        libuuid.so.1 => /lib64/libuuid.so.1 (0x00007fac7cf57000)
        libgcc_s.so.1 => /lib64/libgcc_s.so.1 (0x00007fac7cd41000)
        libnl-route-3.so.200 => /lib64/libnl-route-3.so.200 (0x00007fac7cad4000)
        libnl-3.so.200 => /lib64/libnl-3.so.200 (0x00007fac7c8b3000)

Signed-off-by: Michael MacDonald <mjmac.macdonald@intel.com>

--- a/src/control/SConscript
+++ b/src/control/SConscript
@@ -187,19 +187,25 @@ def scons():
     denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"),
                        sep=" ")
 
+    # Copy setup_spdk.sh script to be executed at daos_server runtime.
+    denv.Install(join('$PREFIX', 'share/daos/control'),
+                 join(gosrc, 'server/init/setup_spdk.sh'))
+
     agentbin = install_go_bin(denv, gosrc, None, "daos_agent", "daos_agent")
     dmgbin = install_go_bin(denv, gosrc, None, "dmg", "dmg")
     drpcbin = install_go_bin(denv, gosrc, None, "drpc_test", "hello_drpc")
+    serverbin = install_go_bin(denv, gosrc, None, "daos_server",
+                               "daos_server")
 
-    AlwaysBuild([agentbin, dmgbin, drpcbin])
+    AlwaysBuild([agentbin, dmgbin, drpcbin, serverbin])
 
     SConscript('lib/spdk/SConscript', exports='denv')
 
-    senv = denv.Clone()
-    denv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
-    prereqs.require(senv, 'pmdk', 'spdk', 'ofi', 'hwloc')
+    aenv = denv.Clone()
+    aenv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
+    prereqs.require(aenv, 'pmdk', 'spdk', 'ofi', 'hwloc')
 
-    cgolibdirs = senv.subst("-L$BUILD_DIR/src/control/lib/spdk "
+    cgolibdirs = aenv.subst("-L$BUILD_DIR/src/control/lib/spdk "
                             "-L$BUILD_DIR/src/gurt "
                             "-L$BUILD_DIR/src/cart "
                             "-L$SPDK_PREFIX/lib "
@@ -215,22 +221,12 @@ def scons():
              " -lspdk_sock -lspdk_log -lspdk_notify" + \
              " -lspdk_blob_bdev -lspdk_vmd -lnuma -ldl"
 
-    senv.AppendENVPath("CGO_LDFLAGS", ldopts, sep=" ")
-
-    senv.AppendENVPath("CGO_CFLAGS",
-                       senv.subst("-I$SPDK_PREFIX/include "
+    aenv.AppendENVPath("CGO_CFLAGS",
+                       aenv.subst("-I$SPDK_PREFIX/include "
                                   "-I$OFI_PREFIX/include"),
                        sep=" ")
 
-    # Copy setup_spdk.sh script to be executed at daos_server runtime.
-    senv.Install(join('$PREFIX', 'share/daos/control'),
-                 join(gosrc, 'server/init/setup_spdk.sh'))
-
-    serverbin = install_go_bin(senv, gosrc, [denv.nvmecontrol], "daos_server",
-                               "daos_server")
-
     #Admin binary is expected to be relocated so origin based paths are useless
-    aenv = senv.Clone()
     aenv["ENV"]["CGO_LDFLAGS"] = old_cgold
     aenv.Replace(RPATH=[])
     # Sets CGO_LDFLAGS for rpath
@@ -239,7 +235,7 @@ def scons():
     adminbin = install_go_bin(aenv, gosrc, [denv.nvmecontrol], "daos_admin",
                               "daos_admin")
 
-    AlwaysBuild([serverbin, adminbin])
+    AlwaysBuild([adminbin])
 
     if is_firmware_mgmt_build(denv):
         print("(EXPERIMENTAL) Building DAOS firmware tools")
