DAOS-623 build: Remove client/server libs from common package
Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/gurt/SConscript
+++ b/src/gurt/SConscript
@@ -12,7 +12,7 @@ SRC = ['debug.c', 'dlog.c', 'hash.c', 'misc.c', 'heap.c', 'errno.c',
 def scons():
     """Scons function"""
 
-    Import('env', 'prereqs', 'CART_VERSION')
+    Import('env', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
 
@@ -23,10 +23,8 @@ def scons():
     prereqs.require(denv, 'uuid')
 
     gurt_targets = denv.SharedObject(SRC)
-    gurt_lib = daos_build.library(denv, 'libgurt', gurt_targets,
-                                  SHLIBVERSION=CART_VERSION)
-    denv.InstallVersionedLib('$PREFIX/lib64/', gurt_lib,
-                             SHLIBVERSION=CART_VERSION)
+    gurt_lib = daos_build.library(denv, 'libgurt', gurt_targets)
+    denv.Install('$PREFIX/lib64/', gurt_lib)
 
     Default(gurt_lib)
     Export('gurt_lib', 'gurt_targets')
