--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -60,7 +60,7 @@ def scons():
     SConscript('swim/SConscript')
     Default('swim')
 
-    Import('env', 'prereqs', 'swim_targets', 'gurt_lib', 'CART_VERSION')
+    Import('env', 'prereqs', 'swim_targets', 'gurt_lib')
     Import('conf_dir')
 
     env.Alias('install', '$PREFIX')
@@ -93,11 +93,9 @@ def scons():
 
         denv.Requires(cart_targets, pp_files)
 
-    cart_lib = daos_build.library(denv, 'libcart', [cart_targets, swim_targets],
-                                  SHLIBVERSION=CART_VERSION)
+    cart_lib = daos_build.library(denv, 'libcart', [cart_targets, swim_targets])
     denv.Requires(cart_lib, [swim_targets, gurt_lib])
-    denv.InstallVersionedLib('$PREFIX/lib64/', cart_lib,
-                             SHLIBVERSION=CART_VERSION)
+    denv.Install('$PREFIX/lib64/', cart_lib)
 
     Default(cart_lib)
     Export('cart_lib', 'cart_targets')
