--- a/src/tests/ftest/nvme/nvme_pool_extend.yaml
+++ b/src/tests/ftest/nvme/nvme_pool_extend.yaml
@@ -2,9 +2,7 @@ hosts:
   test_servers:
     - server-A
     - server-B
-    - server-C
   test_clients:
-    - client-E
     - client-F
     - client-G
 # If we define the server under test_servers, launch.py will convert it to the
@@ -13,8 +11,12 @@ hosts:
 # other than hosts.
 extra_servers:
   test_servers:
+    - server-C
     - server-D
+    - server-E
 timeout: 1000
+setup:
+  start_servers_once: False
 server_config:
     engines_per_host: 2
     name: daos_server
@@ -42,34 +44,48 @@ server_config:
         scm_list: ["/dev/pmem1"]
         scm_mount: /mnt/daos1
 pool:
-    mode: 146
-    name: daos_server
-    scm_size: 100000000000
-    nvme_size: 700000000000
-    svcn: 4
-    control_method: dmg
+  mode: 146
+  name: daos_server
+  scm_size: 5000000000
+  nvme_size: 30000000000
+  svcn: 4
+  control_method: dmg
+  rebuild_timeout: 120
+  pool_query_timeout: 30
 container:
     type: POSIX
     control_method: daos
-    oclass: SX
-    properties: cksum:crc64,cksum_size:16384,srv_cksum:on
+    properties: cksum:crc16,cksum_size:16384,srv_cksum:on,rf:1
+    oclass: RP_2G8
 ior:
-    clientslots:
-      slots: 48
-    test_file: /testFile
-    repetitions: 1
-    dfs_destroy: False
-    iorflags:
-      write_flags: "-w -F -k -G 1"
-      read_flags: "-r -R -k -G 1"
-      ior_api:
-        - DFS
-      obj_class:
-        - "SX"
+  client_processes:
+    np: 48
+  test_file: /testFile
+  repetitions: 10
+  dfs_destroy: False
+  iorflags:
+    write_flags: "-w -F -k -G 1"
+    read_flags: "-F -r -R -k -G 1"
+    api: DFS
+    dfs_oclass: RP_2G8
+    dfs_dir_oclass: RP_2G8
     ior_test_sequence:
-    #   - [transfersize, blocksize]
+    #   - [scm_size, nvme_size, transfersize, blocksize]
     #    The values are set to be in the multiples of 10.
     #    Values are appx GB.
-        - [4000, 50000000]          #[4K, 51M]
-        - [1000000, 500000000]      #[1M, 512M]
-        - [1000000000, 8000000000]  #[1G, 8G]
+        - [5000000000, 30000000000, 4000, 50000000]          #[4K, 51M]
+        - [5000000000, 30000000000, 1000000, 500000000]      #[1M, 512M]
+        - [5000000000, 30000000000, 1000000000, 8000000000]  #[1G, 8G]
+test_obj_class:
+  oclass:
+    - RP_3G6
+    - RP_4G1
+    - S1
+loop_test:
+  iterations: 3
+aggregation:
+  test_with_aggregation: True
+rebuild:
+  test_with_rebuild: True
+checksum:
+  test_with_checksum: False
