--- a/utils/build.config
+++ b/utils/build.config
@@ -3,7 +3,7 @@ component=daos
 
 [commit_versions]
 ARGOBOTS = v1.1
-PMDK = 1.9.2
+PMDK = 1.11.0-rc1
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
 SPDK = v20.01.2
