--- a/src/tests/ftest/soak/soak_stress_2h.yaml
+++ b/src/tests/ftest/soak/soak_stress_2h.yaml
@@ -62,17 +62,10 @@ container:
     oclass: SX
     control_method: daos
 container_reserved:
-    oclass: OC_SX
-    akey_size: 5
-    dkey_size: 5
-    data_size: 4096
-    object_qty: 20
-    record_qty: 1
-    record_size: 100
-    array_size: 1
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
-    control_method: API
+    oclass: SX
+    control_method: daos
 # test_params - Defines the type of test to run and how long it runs
 #               It also defines how many pools and jobs to create
 #               name:                The name of the Avocado testcase
@@ -91,6 +84,7 @@ soak_stress:
     test_timeout: 2
     joblist:
         - ior_stress
+        - mdtest_stress
 # Commandline parameters
 # Benchmark and application params
 # IOR params -a DFS and -a MPIIO
@@ -118,4 +112,28 @@ ior_stress:
         - '512K'
         - '64k'
     dfs_oclass:
-        - "SX"
+        - 'SX'
+mdtest_stress:
+    # maximum timeout for a single job in test in minutes
+    job_timeout: 10
+    nodesperjob:
+        - 1
+    taskspernode:
+        - 1
+    test_dir: "/"
+    api:
+        - 'DFS'
+        - 'POSIX'
+    iteration: 1
+    num_of_files_dirs: 1000
+    pre_iter: 10
+    flags: '-v'
+    write_bytes:
+        - 3901
+    read_bytes:
+        - 3901
+    depth:
+        - 5
+    dfs_oclass: 'SX'
+    dfs_dir_oclass: 'S1'
+    dfs_destroy: False
